[gd_scene load_steps=17 format=3 uid="uid://t41phsm2wrag"]

[ext_resource type="Script" uid="uid://tggt7cyxfrk0" path="res://Scenes/MainMenu/home_screen.gd" id="1_ajl7f"]
[ext_resource type="Texture2D" uid="uid://bht2lbr7tkrtm" path="res://Scenes/MainMenu/Home.png" id="1_y2i7d"]
[ext_resource type="Script" uid="uid://cipyj8crbddkx" path="res://Scenes/MainMenu/HomeButtons/home_button.gd" id="6_c6w5i"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ab77t"]
texture = ExtResource("1_y2i7d")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ha3ui"]

[sub_resource type="SphereMesh" id="SphereMesh_410l8"]
material = SubResource("ShaderMaterial_ha3ui")
radius = 110.0
height = 130.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x4bwu"]

[sub_resource type="SphereMesh" id="SphereMesh_02jyj"]
material = SubResource("ShaderMaterial_x4bwu")
radius = 100.0
height = 130.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mwjn1"]

[sub_resource type="SphereMesh" id="SphereMesh_4l12t"]
material = SubResource("ShaderMaterial_mwjn1")
radius = 120.0
height = 200.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_47me8"]

[sub_resource type="SphereMesh" id="SphereMesh_qkddb"]
material = SubResource("ShaderMaterial_47me8")
radius = 120.0
height = 200.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5yhyo"]

[sub_resource type="SphereMesh" id="SphereMesh_ib800"]
material = SubResource("ShaderMaterial_5yhyo")
radius = 70.0
height = 65.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3ewyv"]

[sub_resource type="SphereMesh" id="SphereMesh_2j0xa"]
material = SubResource("ShaderMaterial_3ewyv")
radius = 105.0
height = 130.0

[node name="Home Panel" type="Panel" groups=["Home"]]
show_behind_parent = true
clip_contents = true
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_ab77t")
script = ExtResource("1_ajl7f")

[node name="Marker2D" type="Marker2D" parent="." groups=["CenterMarker"]]
top_level = true
position = Vector2(641, 361)

[node name="Camera2D" type="Camera2D" parent="Marker2D"]

[node name="0" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 529.9
offset_top = 41.0
offset_right = 749.9
offset_bottom = 244.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "0"
flat = true
script = ExtResource("6_c6w5i")

[node name="Bubble" type="MeshInstance2D" parent="0"]
visible = false
self_modulate = Color(1, 1, 1, 0.0980392)
position = Vector2(110.5, 102)
mesh = SubResource("SphereMesh_410l8")

[node name="1" type="Button" parent="."]
layout_mode = 1
offset_left = 721.7
offset_top = 81.6
offset_right = 941.7
offset_bottom = 284.6
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "1"
flat = true
script = ExtResource("6_c6w5i")

[node name="Bubble" type="MeshInstance2D" parent="1"]
visible = false
self_modulate = Color(1, 1, 1, 0.0980392)
position = Vector2(101.8, 106.9)
scale = Vector2(0.66894, 0.730769)
mesh = SubResource("SphereMesh_410l8")

[node name="2" type="Button" parent="."]
layout_mode = 1
offset_left = 807.1
offset_top = 204.8
offset_right = 1027.1
offset_bottom = 407.8
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "2"
flat = true
script = ExtResource("6_c6w5i")

[node name="Bubble" type="MeshInstance2D" parent="2"]
visible = false
self_modulate = Color(1, 1, 1, 0.0980392)
position = Vector2(99.4001, 113.2)
scale = Vector2(0.685777, 0.676923)
mesh = SubResource("SphereMesh_02jyj")

[node name="3" type="Button" parent="."]
layout_mode = 1
offset_left = 807.1
offset_top = 347.6
offset_right = 1027.1
offset_bottom = 550.6
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "3"
flat = true
script = ExtResource("6_c6w5i")

[node name="Bubble" type="MeshInstance2D" parent="3"]
visible = false
self_modulate = Color(1, 1, 1, 0.0980392)
position = Vector2(99.4, 118.2)
scale = Vector2(0.632535, 0.750769)
mesh = SubResource("SphereMesh_410l8")

[node name="4" type="Button" parent="."]
layout_mode = 1
offset_left = 717.5
offset_top = 487.6
offset_right = 950.5
offset_bottom = 692.6
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "4"
flat = true
script = ExtResource("6_c6w5i")

[node name="Bubble" type="MeshInstance2D" parent="4"]
visible = false
self_modulate = Color(1, 1, 1, 0.0980392)
position = Vector2(105.5, 126.4)
scale = Vector2(0.592337, 0.47)
mesh = SubResource("SphereMesh_4l12t")

[node name="5" type="Button" parent="."]
layout_mode = 1
offset_left = 532.7
offset_top = 540.8
offset_right = 752.7
offset_bottom = 743.8
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "5"
flat = true
script = ExtResource("6_c6w5i")

[node name="Bubble" type="MeshInstance2D" parent="5"]
visible = false
self_modulate = Color(1, 1, 1, 0.0980392)
position = Vector2(108.8, 119.1)
scale = Vector2(0.659838, 0.736922)
mesh = SubResource("SphereMesh_410l8")

[node name="6" type="Button" parent="."]
layout_mode = 1
offset_left = 335.3
offset_top = 484.8
offset_right = 572.3
offset_bottom = 687.8
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "6"
flat = true
script = ExtResource("6_c6w5i")

[node name="Bubble" type="MeshInstance2D" parent="6"]
visible = false
self_modulate = Color(1, 1, 1, 0.0980392)
position = Vector2(125.7, 130.7)
scale = Vector2(0.650737, 0.455)
mesh = SubResource("SphereMesh_qkddb")

[node name="7" type="Button" parent="."]
layout_mode = 1
offset_left = 244.3
offset_top = 349.0
offset_right = 481.3
offset_bottom = 552.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "7"
flat = true
script = ExtResource("6_c6w5i")

[node name="Bubble" type="MeshInstance2D" parent="7"]
visible = false
self_modulate = Color(1, 1, 1, 0.0980392)
position = Vector2(122, 113.5)
scale = Vector2(1, 1.4)
mesh = SubResource("SphereMesh_ib800")

[node name="8" type="Button" parent="."]
layout_mode = 1
offset_left = 245.7
offset_top = 206.2
offset_right = 485.7
offset_bottom = 406.2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "8"
flat = true
script = ExtResource("6_c6w5i")

[node name="Bubble" type="MeshInstance2D" parent="8"]
visible = false
self_modulate = Color(1, 1, 1, 0.0980392)
position = Vector2(125.8, 112.8)
scale = Vector2(0.634052, 0.661538)
mesh = SubResource("SphereMesh_2j0xa")

[node name="9" type="Button" parent="."]
layout_mode = 1
offset_left = 332.5
offset_top = 81.6
offset_right = 552.5
offset_bottom = 281.6
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "9"
flat = true
script = ExtResource("6_c6w5i")

[node name="Bubble" type="MeshInstance2D" parent="9"]
visible = false
self_modulate = Color(1, 1, 1, 0.0980392)
position = Vector2(125, 105.4)
scale = Vector2(0.646187, 0.723077)
mesh = SubResource("SphereMesh_410l8")

[connection signal="mouse_entered" from="0" to="0" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="0" to="0" method="_on_mouse_exited"]
[connection signal="pressed" from="0" to="0" method="_on_pressed"]
[connection signal="mouse_entered" from="1" to="1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="1" to="1" method="_on_mouse_exited"]
[connection signal="pressed" from="1" to="1" method="_on_pressed"]
[connection signal="mouse_entered" from="2" to="2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="2" to="2" method="_on_mouse_exited"]
[connection signal="pressed" from="2" to="2" method="_on_pressed"]
[connection signal="mouse_entered" from="3" to="3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="3" to="3" method="_on_mouse_exited"]
[connection signal="pressed" from="3" to="3" method="_on_pressed"]
[connection signal="mouse_entered" from="4" to="4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="4" to="4" method="_on_mouse_exited"]
[connection signal="pressed" from="4" to="4" method="_on_pressed"]
[connection signal="mouse_entered" from="5" to="5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="5" to="5" method="_on_mouse_exited"]
[connection signal="pressed" from="5" to="5" method="_on_pressed"]
[connection signal="mouse_entered" from="6" to="6" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="6" to="6" method="_on_mouse_exited"]
[connection signal="pressed" from="6" to="6" method="_on_pressed"]
[connection signal="mouse_entered" from="7" to="7" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="7" to="7" method="_on_mouse_exited"]
[connection signal="pressed" from="7" to="7" method="_on_pressed"]
[connection signal="mouse_entered" from="8" to="8" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="8" to="8" method="_on_mouse_exited"]
[connection signal="pressed" from="8" to="8" method="_on_pressed"]
[connection signal="mouse_entered" from="9" to="9" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="9" to="9" method="_on_mouse_exited"]
[connection signal="pressed" from="9" to="9" method="_on_pressed"]
